cabal-version:      3.0
name:               raskell
version:            0.1.0.0
synopsis:           A Racket-like Lisp language
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris McDearman
maintainer:         mcdearmanchris@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror=missing-signatures -Werror=incomplete-patterns

executable raskell
    import:           warnings
    main-is:          Main.hs
    other-modules: 
       Common.Span
       Syntax.Token
       Syntax.Lexer
       Syntax.SExpr
       Syntax.AST
       Syntax.Reader
       Syntax.Parser

    default-extensions: 
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TupleSections
        TemplateHaskell
    build-depends:    
        base ^>=4.17.2.1,
        megaparsec,
        text,
        pretty-simple,
    hs-source-dirs:   src
    default-language: Haskell2010
