cabal-version:      3.0
name:               raskell
version:            0.1.0.0
synopsis:           A small Lisp interpreter in under 400 lines of Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris McDearman
maintainer:         mcdearmanchris@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror=missing-signatures -Werror=incomplete-patterns -Werror=incomplete-uni-patterns

executable raskell
    import:           warnings
    main-is:          Main.hs
    other-modules: 
        Span
        Reader
        SExpr
        Eval
        RuntimeException
        Value
    default-extensions: 
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TupleSections
        TemplateHaskell
    build-depends:    
        base,
        megaparsec,
        text,
        pretty-simple,
        array,
        haskeline,
    hs-source-dirs:   src
    default-language: Haskell2010
